# bare

./: .clang-format  .gitignore  .gitmodules  .lunteignore  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  bootstrap.h  bootstrap.js  bundle.config.js  index.js  package-lock.json  package.json  pear.c
.github/workflows/: integrate.yml  prebuild.yml  publish.yml  test.yml
addons/: Makefile  fs.c
bench/: buffer.js  harness.js
bench/buffer/: alloc-unsafe.bare+node+bun.js  alloc-unsafe.deno.js  alloc-unsafe.js  alloc.bare+node+bun.js  alloc.deno.js  alloc.mjs  alloc.pear+node+bun.js  compare.bare+node+bun.js  compare.deno.js  compare.mjs  compare.pear+node+bun.js  to-string.bare+node+bun.js  to-string.deno.js  to-string.js
bench/http/: server.bare+node.js  server.bare.imports.json  server.bare.js  server.bun.js  server.deno.js  server.node.js
bench/platform/: inheritance-class.bare+node+bun.js  inheritance-class.deno.js  inheritance-function.bare+node+bun.js  inheritance-function.deno.js  inheritance.bare+node+bun.js  inheritance.deno.js  structured-clone.bare+node+bun.js
bench/thread/: join.bare.js  join.pear.js
bench/url/: new.bare+node+bun.js
cmake/: bare.cmake  module.cmake  options.cmake  overrides.cmake  pear.cmake  v8.cmake
example/: app.bundle  buffer.js  cjs.cjs  esm.mjs  index.js  log.js  package.json  path.js  sodium.js  suspend.js  test.js  thread.js  timers.js  udx.js
example/addons/: CMakeLists.txt  add.c  add.js
examples/: CMakeLists.txt  socket-app.js  systemd-launcher.c
include/: bare.h  node_api.h  pear.h  pearjs.h
include/bare/: helper.h  module.h  target.h  version.h
include/pear/: modules.h  target.h  version.h
lib/: bootstrap.js  buffer.js  load-addon.js  module.js  process.js  queue-microtask.js
lib/buffer/: ascii.js  base64.js  hex.js  index.js  utf-8.js
lib/builtins/: console.js  events.js  module.js  path.js  process.js
npm/: README.md  index.cjs  index.d.ts  index.mjs  package-lock.json  package.json
scripts/: build.mjs  bundle.mjs  fetch-v8.mjs  fetch.mjs  install.mjs  link.mjs
src/: .gitignore  addon.c  addon.h  addon.js  addons.c  addons.h  android.h  bare.c  bare.def  bare.js  bootstrap.h  bootstrap.js  builtins.json  bundle.config.js  errors.js  fs.c  fs.h  globals.js  import-map.json  js.def  napi.def  pear.c  pear.js  posix.h  runtime.c  runtime.h  sync_fs.c  sync_fs.h  thread.c  thread.h  thread.js  threads.h  types.h
src/builtins/: README.md  addon.js  assert.js  buffer.js  console.js  events.js  globals.js  module.js  os.js  path.js  process.js  repl.js  thread.js  timers.js  url.js
src/builtins/process/: addon.js  data.js  env.js  hrtime.js  thread.js
src/runtime/: android.h  posix.h
test/: CMakeLists.txt  addon-load-dependent.js  addon-load-multiple-threads.js  addon-load-scoped.js  addon-load-unload.js  addon-load.js  addon-resolve-cache.js  addon-resolve.js  addon-unload.js  addon.js  argv-empty.c  basic.c  basic.js  dependent-addon.js  exit-enqueue-immediate.js  exit-enqueue-readfile.js  exit-enqueue-timeout.js  exit-flush-microtask.js  exit-on-before-exit.js  exit-on-exit.js  exit-on-idle.js  exit-on-resume.js  exit-on-suspend.js  exit-on-wakeup.js  harness.js  idle-before-suspend.js  idle-on-idle.js  idle-on-resume.js  idle-on-suspend.js  import-addon.cjs  import-addon.mjs  import-bundle.js  import-cjs-from-mjs.mjs  import-cjs.cjs  import-cjs.mjs  import-cts.cts  import-dynamic-cjs.cjs  import-dynamic-cjs.mjs  import-dynamic-from-cjs.cjs  import-dynamic-mjs.cjs  (+56 more)
test/fixtures/: CMakeLists.txt  cjs.cjs  cts.cts  mjs.mjs  mts.mts  thread-shared-data.js  thread-transfer-data.js  thread.cjs  thread.js  user-data.js
test/fixtures/addon/: .gitignore  CMakeLists.txt  binding.c  binding.gyp  package.json
test/fixtures/addon/prebuilds/darwin-arm64/: addon.bare
test/fixtures/addon/prebuilds/darwin-x64/: addon.bare
test/fixtures/addon/prebuilds/linux-arm64/: addon.bare
test/fixtures/addon/prebuilds/linux-x64/: addon.bare
test/fixtures/addon/prebuilds/win32-arm64/: addon.bare
test/fixtures/addon/prebuilds/win32-x64/: addon.bare
test/fixtures/bundle/: .gitattributes  .gitignore  CMakeLists.txt  mod.bundle  mod.js  package.json
test/fixtures/dependent-addon/a/: CMakeLists.txt  binding.c  package.json
test/fixtures/dependent-addon/a/prebuilds/darwin-arm64/: a.bare  a.bare.exports
test/fixtures/dependent-addon/a/prebuilds/darwin-x64/: a.bare  a.bare.exports
test/fixtures/dependent-addon/a/prebuilds/linux-arm64/: a.bare
test/fixtures/dependent-addon/a/prebuilds/linux-x64/: a.bare
test/fixtures/dependent-addon/a/prebuilds/win32-arm64/: a.bare  a.bare.exports
test/fixtures/dependent-addon/a/prebuilds/win32-x64/: a.bare  a.bare.exports
test/fixtures/dependent-addon/b/: CMakeLists.txt  binding.c  index.js  package.json
test/fixtures/dependent-addon/b/prebuilds/darwin-arm64/: b.bare
test/fixtures/dependent-addon/b/prebuilds/darwin-x64/: b.bare
test/fixtures/dependent-addon/b/prebuilds/linux-arm64/: b.bare
test/fixtures/dependent-addon/b/prebuilds/linux-x64/: b.bare
test/fixtures/dependent-addon/b/prebuilds/win32-arm64/: b.bare
test/fixtures/dependent-addon/b/prebuilds/win32-x64/: b.bare
test/fixtures/scoped-addon/: .gitignore  CMakeLists.txt  binding.c  package.json
test/fixtures/scoped-addon/prebuilds/darwin-arm64/: bare__addon.bare
test/fixtures/scoped-addon/prebuilds/darwin-x64/: bare__addon.bare
test/fixtures/scoped-addon/prebuilds/linux-arm64/: bare__addon.bare
test/fixtures/scoped-addon/prebuilds/linux-x64/: bare__addon.bare
test/fixtures/scoped-addon/prebuilds/win32-arm64/: bare__addon.bare
test/fixtures/scoped-addon/prebuilds/win32-x64/: bare__addon.bare
test/helpers/: build.json.in
